Fixed gap issue with blockquote

--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -177,7 +177,7 @@ blockquote {
 	line-height: 60px;
 	width: 100%;
 	background-color: #060606;
-	height: 140px;
+	height: 70px;
 	text-align: center;
 	padding-top: 40px;
 	color: #ffffff;
